--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"type": "project",
 	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
 	"repositories": [
-		{"type": "vcs", "url": "https://github.com/webovac/core"}
+		{"type": "vcs", "url": "https://github.com/webovac/core"},
+		{"type": "vcs", "url": "https://github.com/webovac/generator"}
 	],
 	"require": {
 		"php": ">=8.1",
