--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	],
 	"require": {
 		"php": ">=8.1",
-		"webovac/core": "~0.1.0"
+		"ext-gd": "*",
+		"webovac/core": "dev-main"
 	},
 	"require-dev": {
 		"nette/tester": "~2.5.0",
