--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	"require": {
 		"php": ">=8.1",
 		"ext-gd": "*",
-		"webovac/core": "dev-main"
+		"webovac/core": "dev-main",
+		"contributte/image-storage": "~3.0.0"
 	},
 	"require-dev": {
 		"nette/tester": "~2.5.0",
