--- a/config/common.neon
+++ b/config/common.neon
@@ -1,64 +1,24 @@
 application:
 	catchExceptions: %productionMode%
 	errorPresenter: Error
-	scanDirs: [%vendorDir%/webovac/core]
 	mapping:
 		*: 'Webovac\Core\Presenter\*\**Presenter'
 
 session:
 	expiration: 14 days
-	save_path: %tempDir%/../sessions
-#	cookieDomain: %session.cookieDomain%
-
-services:
-	latte.templateFactory: App\Lib\TemplateFactory
-	- App\Model\DataModel
-
-search:
-	control:
-		in: %appDir%
-		classes: I*Control
-	lib:
-		in: %appDir%
-		classes: 'App\**\Lib\**'
-	module:
-		in: %appDir%
-		implements: Webovac\Core\Module
-	dataRepository:
-		in: %appDir%
-		extends: Webovac\Core\Model\CmsDataRepository
-
-decorator:
-	Nette\Application\UI\TemplateFactory:
-		inject: true
-	App\Model\DataModel:
-		inject: true
-	Webovac\Core\Model\CmsDataRepository:
-		inject: true
-	Webovac\Core\Model\CmsRepository:
-		inject: true
+	save_path: %rootDir%/sessions
+	cookieDomain: %webovac.core.host%
 
 extensions:
-	dbal: Nextras\Dbal\Bridges\NetteDI\DbalExtension
-	migrations: Nextras\Migrations\Bridges\NetteDI\MigrationsExtension
-	imageStorage: Contributte\ImageStorage\DI\ImageStorageExtension
-	webovac.core: Webovac\Core\DI\CoreExtension(%rootDir%, %webovac%)
+	webovac.core: Webovac\Core\DI\CoreExtension
 
-dbal:
-	driver: %nextras.dbal.driver%
-	host: localhost
-	database: %nextras.dbal.database%
-	username: %nextras.dbal.username%
-	password: %nextras.dbal.password%
-	connectionTz: auto-offset
-	searchPath: [public]
-	panelQueryExplain: false
-
-migrations:
-	dir: %appDir%/../migrations
-	driver: %nextras.migrations.driver%
-	dbal: nextras
-	withDummyData: %debugMode%
+webovac.core:
+	host: %webovac.core.host%
+	db:
+		driver: %webovac.core.db.driver%
+		database: %webovac.core.db.database%
+		username: %webovac.core.db.username%
+		password: %webovac.core.db.password%
 
 imageStorage:
 	data_path: %rootDir%/www/data
